<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman_es_support</name>
  <version>0.3.5</version>
  <description>
    <p>
      ROS-Industrial support for the Motoman ES series (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman ES manipulators. This currently includes the ES165RD-II.
    </p>
    <p>
      <b>Specifications</b>
    </p>
    <ul>
      <li>ES165RN - YR-ES165RN-A00 (NX100 Standard Specification)</li>
      <li>ES165RD - YR-ES165RD-A00 (DX100 Standard Specification)</li>
      <li>ES165RD-II - YR-ES165RD-J00 (DX200 Standard Specification)</li>
      <li>ES200RN-120 - YR-ES200RN-A10 (NX100 Standard Specification)</li>
      <li>ES200RD-120 - YR-ES200RD-A10 (DX100 Standard Specification)</li>
    </ul>
    <p>
      Joint limits and max joint velocities are based on the information found in:
      <ul>
        <li><em>MOTOMAN-ES165RD II INSTRUCTIONS (HW1482721)</em>, version
          <em>170336-1CD, rev 2</em>.
        </li>
        <li><em>MOTOMAN-ES165RD INSTRUCTIONS (HW0485719)</em>, version
          <em>156827-1CD, rev 7</em>.
        </li>
        <li><em>MOTOMAN-ES165RD INSTRUCTIONS (HW0482145)</em>, version
          <em>149538-1CD, rev 3</em>.
        </li>
        <li><em>MOTOMAN-ES200RN-120 INSTRUCTIONS (HW0482571)</em>, version
          <em>151533-1CD, rev 1</em>.
        </li>
      </ul>
      All URDFs / XACROs are based on the default motion and joint velocity
      limits, unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Michael Ripperger</author>
  <maintainer email="techsupport@motoman.com">Eric Marcil</maintainer>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache-2.0</license>

  <url type="bugtracker">https://github.com/yaskawa-global/motoman_ros2_support_packages/issues</url>
  <url type="repository">https://github.com/yaskawa-global/motoman_ros2_support_packages</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>motoman_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
