<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman_gp200r_support</name>
  <version>0.3.5</version>
  <description>
    <p>ROS-Industrial support for the Motoman GP200r (and variants).</p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman GP200r series of manipulators.
    </p>
    <p>
      <b>Specifications</b>
    </p>
    <ul>
      <li>GP200R - Not equipped with spot welding harness - YR-1-06VR200-A00 (STANDARD SPECIFICATION)</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information 
      found in <em>MOTOMAN-GP165R,GP200R INSTRUCTIONS (HW1484396)</em>
      version <em>186044-1CD, rev 4</em>.
      All urdfs are based on the default motion and joint velocity limits, 
      unless noted otherwise.
    </p>
    <p>
      This model comes in two versions: equipped with spot welding harness
      and not equipped with spot welding harness. The version with the spot
      welding harness has reduced motion range to account for restrictions
      from extra hardware and cables routed outside of the robot. It also
      has a reduced payload of 185 kg and lower allowable moment and inertia
      for the wrist joints. Please refer to the manual for further details.
    </p>
    <p>
      This support package only has the version without a spot welding harness
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Dylan Rolleigh</author>
  <author>Akash Jinandra (Bastian Solutions)</author>
  <maintainer email="techsupport@motoman.com">Eric Marcil</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD-3-Clause</license>

  <url type="bugtracker">https://github.com/yaskawa-global/motoman_ros2_support_packages/issues</url>
  <url type="repository">https://github.com/yaskawa-global/motoman_ros2_support_packages</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>motoman_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
