<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman_hc20_support</name>
  <version>0.3.5</version>
  <description>
    <p>ROS-Industrial support for the Motoman HC20 (and variants).</p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman HC20DT, HC20DTP and HC30PL manipulators.
    </p>
    <p>
      <b>Specifications</b>
    </p>
    <ul>
      <li>HC20DT - YR-1-06VXHC20-B1*</li>
      <li>HC20DTP - YR-1-06VXCP20-B00 (SPECIFICATION WITH BUILT-IN AIR HOSES, ETHERNET AND I/O CABLES)</li>
      <li>HC30PL - YR-1-06VXCP30-B00 (BUILT-IN AIR HOSES, ETHERNET AND I/O CABLES SPECIFICATION)</li>
   </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information
      found in:
    </p>
    <ul>
      <li><em>MOTOMAN-HC20DT INSTRUCTIONS DUST-PROOF/DRIP-PROOF SPECIFICATION (HW1486129)</em> version
        <em>190085-1CD, rev 4</em>.
      </li>
      <li><em>MOTOMAN-HC20DTP INSTRUCTIONS DUST-PROOF/DRIP-PROOF SPECIFICATION (HW2480394)</em> version
        <em>193888-1CD, rev 6</em>.
      </li>
      <li><em>MOTOMAN-HC30PL INSTRUCTIONS DUST-PROOF/DRIP-PROOF SPECIFICATION (HW2480886)</em> version
        <em>196230-1CD, rev 5</em>.
      </li>
    </ul>
    <p>
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise.
    </p>
    <p>
      NOTE: the HC30PL is the palletizing variant of the HC20 where the wrist
      joints ('joint_4' and 'joint_5') are constrained to orient the flange normal 
      to within +/-15 degrees with respect to the ground plane normal.
      Unfortunately, this limitation can't be modelled using URDF joint limits,
      and must therefore be handled by the motion planner or other process
      planning trajectories.
      Failure to take this constraint into account will cause the Yaskawa robot
      controller to abort trajectory execution and to raise alarms on the Teach
      Pendant.
      Additionally, the speed and joint limits of the robot explicitly vary depending on
      the payload. This URDF assumes no payload, i.e. max speed and joint limits. See
      the manual for more details.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Eric Marcil</author>
  <maintainer email="techsupport@motoman.com">Eric Marcil</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD-3-Clause</license>

  <url type="bugtracker">https://github.com/yaskawa-global/motoman_ros2_support_packages/issues</url>
  <url type="repository">https://github.com/yaskawa-global/motoman_ros2_support_packages</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>motoman_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
