<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman_sda10f_support</name>
  <version>0.3.5</version>
  <description>
    <p>ROS-Industrial support for the Motoman SDA10F (and variants).</p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman SDA10F manipulators. This currently includes the base
      model and the CSDA10F variant (ie: clean standard).
    </p>
    <p>
      <b>Specifications</b>
    </p>
    <ul>
      <li>SDA10F - Default</li>
      <li>CSDA10F (YR-CSDA010F-A10) - Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information 
      found in the online 
      http://www.motoman.com/datasheets/sda10f.pdf for SDA10F and
      in the <em>MOTOMAN-CSDA10D/CSDA10F INSTRUCTIONS (HW1481698)</em>
      version <em>173323-1CD, rev 0</em> for CSDA10F.
    </p>
    <p>
      All urdfs are based on the default motion and joint velocity limits, 
      unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Amrith Ganesh</author>
  <author>Daniel Ordonez</author>
  <author>Thiago de Freitas</author>
  <author>Shaun Edwards</author>
  <maintainer email="techsupport@motoman.com">Eric Marcil</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD-3-Clause</license>

  <url type="bugtracker">https://github.com/yaskawa-global/motoman_ros2_support_packages/issues</url>
  <url type="repository">https://github.com/yaskawa-global/motoman_ros2_support_packages</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>motoman_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
